--- a/leshan/Server/ServerLeshan/pom.xml
+++ b/leshan/Server/ServerLeshan/pom.xml
@@ -65,6 +65,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
