--- a/evaluation/tests/pom.xml
+++ b/evaluation/tests/pom.xml
@@ -15,5 +15,19 @@
 	        <version>1.7.30</version>
 	        <scope>runtime</scope>
 	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.eclipse.leshan</groupId>
+	        <artifactId>leshan-server-cf</artifactId>
+	        <version>1.0.0-M13</version>                 
+	    </dependency>
+	    
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.6</version>
+		</dependency>
+
 	</dependencies>
 </project>
